added the finished file

--- a/week1/index.html
+++ b/week1/index.html
@@ -1,10 +1,32 @@
 <html>
 	<head>
-	<title>My First Web Page</title>
+	<title>Some of my favourite things</title>
+	<link rel="icon" type=image.jpg" href="images/favicon.jpg">
+	<h1 class="welcome">Some of my interests</h1>
+	<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		<h1>Hello World!</h1>
-		<p>This is my awesome web page</p>
+		<h1 class="subHeading">Sue Milligan</h1>
+	
+		<img src="images/IMG_0826.jpg" alt="family picture">
+		<h3 class="welcomeMsg">Hi, my name is Sue Milligan and I am currently studying a masters degree in computing at Cardiff University. The picture on the left is of my family.<br>
+		I am on the far left, my son Eric is in the middle and my husband Ross is on the right.<p> This photo was taken last year (pre covid!) at Margam Park. There was an illuminate event where the 
+		park was lit up with lots of different lights and scenarios. <br>The Grand Finale of the evening was a scene projected onto the side of Margam House, showing dragons bursting from the windows and flying away. </p>
+		<p>
+		</h3>
+		<div class="bullets">
+		<p >I'm going to post about a few things that I like</p>
+		<h3>Things I really like in no particular order</h3>
+		<ul>
+		
+			<li>Fallout 4 (and 76)</li>
+			<li>The Libertines</li>
+			<li>Writing fiction</li>
+			<li>Playing the ukulele</li>
+			<li>Volunteering for <a href = "https://anonymousforthevoiceless.org">Anonymous for the Voiceless</a>, an animal rights organisation</li>
+			
+		</div>
+	<p><i>This is the first part of the text.</i> <strong>This is the emboldened part of the text. </strong><a href ="images/IMG_0826.jpg">This is the link to the family picture.</a>
 	</body>
 		
 </html>
